# trajectory_optimization

B-spline/: README.md  astar_bsline.cpp  astar_bsline.py  曲线平滑原理解释.md
Corridor-Inflation+Minimumsnap/: CMakeLists.txt  Corridor-Inflation+Minimumsnap.cpp  Corridor-Inflation+Minimumsnap.py  Minimumsnap问题构建解释.md  README.md
